--- a/css/creative.css
+++ b/css/creative.css
@@ -426,7 +426,7 @@ body {
   position: absolute;
   font-size: 50px;
   color: #E0D8C5;
-  top: 90vh;
+  top: 90%;
 }
 #topDown:hover {
   color: white;
@@ -477,7 +477,6 @@ body {
 }
 .content__container__text {
   display: inline;
-  float: left;
   margin: auto;
   padding-top: auto;
 }
