--- a/css/creative.css
+++ b/css/creative.css
@@ -263,7 +263,7 @@ header .header-content .header-content-inner p {
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
   font-size: 18px;
 }
-/*.portfolio-box:hover .portfolio-box-caption {
+.portfolio-box:hover .portfolio-box-caption {
   opacity: 1;
 }
 .portfolio-box:focus {
@@ -276,7 +276,7 @@ header .header-content .header-content-inner p {
   .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
     font-size: 22px;
   }
-}*/
+}
 .call-to-action h2 {
   margin: 0 auto 20px;
 }
