--- a/css/creative.css
+++ b/css/creative.css
@@ -27,7 +27,9 @@ a {
 }
 a:hover,
 a:focus {
-  color: #eb3812;
+  color: #96392D;
+  transform: scale(1.1);
+  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
 }
 h1,
 h2,
@@ -77,7 +79,7 @@ aside {
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-  color: #eb3812;
+  color: #96392D;
 }
 .navbar-default .navbar-header .navbar-toggle {
   font-weight: 700;
@@ -135,7 +137,7 @@ aside {
   }
   .navbar-default.affix .navbar-header .navbar-brand:hover,
   .navbar-default.affix .navbar-header .navbar-brand:focus {
-    color: #eb3812;
+    color: #96392D;
   }
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
@@ -411,9 +413,7 @@ img::-moz-selection {
   color: #E0D8C5;
   background: transparent;
 }
-body {
-  webkit-tap-highlight-color: #393536;
-}
+
 /*socialButtons*/
 #socialButtons img {
   width:50px; 
@@ -590,7 +590,7 @@ body {
 
 /*menu button*/
 .glyphicon-th-large {
-      position: fixed;
+      position: absolute;
     top: 5vh;
     left: 5vh;
     font-size: 50px;
