--- a/css/creative.css
+++ b/css/creative.css
@@ -28,8 +28,6 @@ a {
 a:hover,
 a:focus {
   color: #96392D;
-  transform: scale(1.1);
-  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
 }
 h1,
 h2,
@@ -166,6 +164,7 @@ header .header-content {
   text-align: center;
   padding: 100px 15px 100px;
   width: 100%;
+  height: 100vh
 }
 header .header-content .header-content-inner h1 {
   font-weight: 700;
@@ -597,24 +596,9 @@ img::-moz-selection {
                  0 0 skyblue;
     }
 
-/*menu button*/
-.glyphicon-th-large {
-      position: absolute;
-    top: 5vh;
-    left: 5vh;
-    font-size: 50px;
+/*hover on images zoom*/
 
-  animation: glyphicon-th-large 2s linear infinite;
-}
-
-
-@keyframes glyphicon-th-large {
-  0% { color: #E0D8C5; }
-  50% { color: rgb(223, 117, 35); }
-  100% { color: rgb(183, 77, 3); }
-}
-
-.glyphicon-th-large:hover {
-  cursor: pointer;
-  color: #E0D8C5;
+#portfolio:hover a:hover {
+  transform: scale(1.1);
+  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
 }
