--- a/css/creative.css
+++ b/css/creative.css
@@ -154,7 +154,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('https://thumbs.gfycat.com/ThoseAntiqueHanumanmonkey-size_restricted.gif');  /*../img/header.jpg*/
+  background-image: url('../img/giphy.gif');  /*../img/header.jpg*/
   text-align: center;
   color: #E0D8C5;
 }
